# redsys

./: .dockerignore  .env.example  .gitignore  PROJECT_JOURNAL.md  README.md  SECURITY.md  SETUP.md  docker-compose.yml
docs/: .gitkeep  README.md
infrastructure/api/: openapi.yaml
infrastructure/docker/: Dockerfile.backend  Dockerfile.backend.dev  Dockerfile.backend.prod  Dockerfile.gateway.dev  Dockerfile.gateway.prod
infrastructure/oathkeeper/: access-rules.yaml  access-rules.yml  config.yaml
infrastructure/security/firewall/: iptables-rules.conf
infrastructure/security/monitoring/: security-alerts.yml
infrastructure/security/ssl/: ssl.conf
scripts/: .gitkeep  dev-build.sh  dev-watch.sh
services/api-gateway/: nginx.conf
services/api-gateway/conf.d/: default.conf
services/backend/: CMakeLists.txt  config.json
services/backend/include/: database.h  job_orchestrator.h  marketplace_service.h  oauth2_middleware.h
services/backend/src/: database.cpp  job_orchestrator.cpp  main.cpp  marketplace_service.cpp  oauth2_middleware.cpp
services/desktop-agent/: DOCKER_IMPLEMENTATION.md  README.md  package.json  tailwind.config.js  vite.config.ts
services/desktop-agent/docs/: ARCHITECTURE.md  README.md
services/desktop-agent/src/: App.css  App.tsx
services/desktop-agent/src-tauri/: Cargo.toml  manifest.json  tauri.conf.json
services/desktop-agent/src-tauri/src/: docker.rs  docker_monitor.rs  error.rs  lib.rs  main.rs  types.rs
services/desktop-agent/src/components/: AppLayout.tsx
services/desktop-agent/src/components/ContentWindow/: ContentWindow.tsx  index.ts
services/desktop-agent/src/components/Layout/: AppLayout.tsx  ContentWindow.tsx  Sidebar.tsx  StatusBar.tsx
services/desktop-agent/src/components/Layout/StatusBar/: DockerStatusItem.tsx  StatusBarItem.tsx  StatusBarItems.tsx  index.ts
services/desktop-agent/src/components/Sidebar/: Sidebar.tsx  index.ts
services/desktop-agent/src/components/StatusBar/: StatusBar.tsx  StatusBarItems.tsx  index.ts
services/desktop-agent/src/components/StatusBar/items/: DockerStatusBarItem.tsx  VersionStatusBarItem.tsx  index.ts
services/desktop-agent/src/components/common/: GlowingCircle.tsx  StatusBarItemWrapper.tsx  index.ts
services/desktop-agent/src/components/features/: index.ts
services/desktop-agent/src/constants/: app.ts  index.ts
services/desktop-agent/src/hooks/: index.ts  useDocker.ts  useDockerStatus.ts  useTippy.ts
services/desktop-agent/src/services/: docker.ts
services/desktop-agent/src/types/: docker.ts  index.ts  layout.ts  statusBar.ts
services/desktop-agent/src/utils/: index.ts  statusBar.ts
shared/database/: flyway.conf  schema.sql
shared/database/migrations/: 001_initial_schema.sql  V001__initial_schema.sql  V002__seed_data.sql
shared/database/seeds/: 001_initial_data.sql
shared/include/: common.h
