[package]
name = "desktop-agent"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri ecosystem - latest stable versions
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

# Serialization - industry standard
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime - optimized features for our use case
tokio = { version = "1.46", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
] }

# Async utilities - required for StreamExt trait
futures = "0.3"

# Error handling - industry standard
thiserror = "1"

# Logging - production-ready
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Docker integration - latest stable
bollard = { version = "0.19.1", features = ["chrono"] }

# Time handling - with serde for JSON serialization
chrono = { version = "0.4", features = ["serde"] }

# Thread-safe lazy initialization
once_cell = "1"
