[package]
name = "desktop-agent"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri ecosystem - latest stable versions
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

# Serialization - industry standard
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime - latest stable, full features as per official docs
tokio = { version = "1.46.1", features = ["full"] }

# Async utilities - required for StreamExt trait
futures = "0.3"

# Error handling - industry standard
thiserror = "1"

# Logging - production-ready
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


# Time handling - with serde for JSON serialization
chrono = { version = "0.4", features = ["serde"] }

# Docker integration - latest stable
bollard = { version = "0.19.1", features = ["chrono"] }

# Async utilities for cancellation
tokio-util = { version = "0.7" }

# Thread-safe lazy initialization
once_cell = "1"
